--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "react-component",
+  "name": "react-components",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
+    "babel-cli": "^6.26.0"
+  },
+  "devDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
