--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "react-components",
   "version": "0.1.0",
+  "author": "Kleros",
+  "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.26.0"
+    "antd": "^3.25.1",
+    "babel-cli": "^6.26.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "react": "^16.12.0",
