--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "babel-preset-react-app": "^9.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
