--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@kleros/react-components",
   "version": "0.1.3",
   "author": "Kleros",
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
   "files": [
-    "lib"
+    "dist"
   ],
   "license": "MIT",
   "devDependencies": {
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf lib && NODE_ENV=production babel ./src/lib --out-dir lib --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "build": "rm -rf dist && NODE_ENV=production babel ./src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
