--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "dist"
   ],
   "license": "MIT",
+  "depencencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.41",
     "@babel/cli": "^7.7.0",
     "babel-preset-react-app": "^9.0.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel ./src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "prepublish": "npm run build:lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
