--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel ./src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
-    "prepublish": "npm run install && npm run build",
+    "prepublishOnly": "yarn && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
