--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@kleros/react-components",
   "version": "0.1.8",
   "author": "Kleros",
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -12,6 +13,8 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "@babel/core": "^7.0.0-beta.41",
     "@babel/cli": "^7.7.0",
     "babel-preset-react-app": "^9.0.2",
@@ -19,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel ./src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "build": "rm -rf dist && NODE_ENV=production babel /src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "prepublishOnly": "yarn && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
