--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel /src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
-    "prepublishOnly": "yarn && npm run build",
+    "build": "rm -rf dist && NODE_ENV=production babel ./src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "prepublishOnly": "git clean -dfx && yarn && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
