--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/",
+    "access": "public"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
