--- a/package.json
+++ b/package.json
@@ -12,15 +12,6 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.0.0-beta.41",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "babel-preset-react-app": "^9.0.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel ./src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
@@ -59,7 +50,19 @@
     "is-text-path": "^2.0.0",
     "is-video": "^1.0.1",
     "less": "^3.10.3",
-    "less-loader": "^5.0.0",
+    "less-loader": "^5.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.0.0-beta.41",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "babel-preset-react-app": "^9.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0",
     "styled-components": "^5.0.0"
+  },
+  "peerDependencies": {
+    "styled-components": ">= 5"
   }
 }
