--- a/package.json
+++ b/package.json
@@ -59,10 +59,7 @@
     "babel-preset-react-app": "^9.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "styled-components": "^5.0.0"
+    "react-scripts": "3.2.0"
   },
-  "peerDependencies": {
-    "styled-components": ">= 5"
-  }
+  "peerDependencies": {}
 }
