--- a/package.json
+++ b/package.json
@@ -45,12 +45,9 @@
     ]
   },
   "dependencies": {
-    "antd": "^3.26.7",
     "is-image": "^3.0.0",
     "is-text-path": "^2.0.0",
-    "is-video": "^1.0.1",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0"
+    "is-video": "^1.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
