--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "clsx": "^1.1.0",
     "is-image": "^3.0.0",
     "is-text-path": "^2.0.0",
-    "is-video": "^1.0.1"
+    "is-video": "^1.0.1",
+    "react-dropzone": "^10.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
