--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "is-image": "^3.0.0",
     "is-text-path": "^2.0.0",
     "is-video": "^1.0.1",
-    "react-dropzone": "^10.2.1"
+    "react-dropzone": "^10.2.1",
+    "web3": "1.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
